# graph-academy

./: .gitignore  LICENSE  package-lock.json  package.json  pyproject.toml  requirements.txt
app/: database.js  index.js  query.graphql  schema.graphql
etl/: api_to_json.py  graphs.py  json_to_pydantic.py  main.py  models.py  neo4j_post_process.py  neo4j_to_networkx.py  networkx_analysis.py  pydantic_to_neo4j.py  table_to_neo4j.py  url_to_table.py
prompts/: json_to_graph_sports.md  text_to_graph_general.md
